tests/codegen/fail/union/enum_same_type_ugly.rs
use juniper::GraphQLUnion;

#[derive(GraphQLUnion)]
enum Character {
    A(std::string::String),
    B(String),
}

fn main() {}
